dnl Process this file with autoconf to produce a configure script.

AC_PREREQ([2.12])

AC_INIT(start-stop-daemon.c)

AC_CHECK_TOOL(CC, gcc)
AC_PROG_CC
AC_CANONICAL_SYSTEM
AC_CHECK_TOOL_PREFIX

AM_INIT_AUTOMAKE(start-stop-daemon,[`cat ${srcdir}/../version-nr`])

AC_PREFIX_DEFAULT(/)

AC_PROG_INSTALL

AC_CHECK_HEADERS(error.h hurd.h ps.h hurd/ihash.h)

AC_CHECK_LIB(shouldbeinlibc, fmt_past_time)
AC_CHECK_LIB(ps, proc_stat_list_pid_proc_stat)

AC_OUTPUT(Makefile)
