## Process this file with automake to produce a Makefile.in

AUTOMAKE_OPTIONS	= 1.1 foreign

override mandir			:=$(mandir)/ja

## Automake variables

man_MANS		= deb.5 deb-old.5 \
			  dpkg-deb.1 md5sum.1 \
			  dpkg.8 dselect.8 install-info.8 start-stop-daemon.8 \
			  update-alternatives.8 update-rc.d.8

