## Process this file with automake to produce Makefile.in

mandir = @mandir@/ja

dist_man_MANS = \
	822-date.1 \
	cleanup-info.8 \
	deb-control.5 \
	deb-old.5 \
	deb.5 \
	dpkg-architecture.1 \
	dpkg-checkbuilddeps.1 \
	dpkg-deb.1 \
	dpkg-divert.8 \
	dpkg-name.1 \
	dpkg-query.1 \
	dpkg-scanpackages.1 \
	dpkg-scansources.1 \
	dpkg-source.1 \
	dpkg-statoverride.8 \
	dpkg.1 \
	dselect.1 \
	install-info.8 \
	start-stop-daemon.8 \
	update-alternatives.8
